# ansible-role-starship_rs

./: .gitignore  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  Gemfile  README.md  kitchen.yml  pyproject.toml  requirements.yml
.github/workflows/: ci.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
tasks/: Darwin.yml  install_from_source.yml  main.yml
templates/: 99_starship.j2
test/integration/darwin/: default.yml  default_spec.rb
test/integration/linux/: Dockerfile.erb  default.yml  default_spec.rb
